Added more tests (for a bit more complicated online-reference) and implemented corresponding behaviour; also slightly refactored implementation of getReferencedModel(URI)